--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,10 +23,12 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
+  flutter_bloc:
   firebase_core:
   firebase_auth:
   cloud_firestore:
   google_sign_in:
+  equatable:
 
 dev_dependencies:
   flutter_test:
