--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -1,33 +1,22 @@
-name: Flutter
-
-on:
-  push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
-
+on: push
+name: Test, Build and Release apk
 jobs:
   build:
-
+    name: Build APK
     runs-on: ubuntu-latest
-
-    container:
-      image:  google/dart:latest
-
     steps:
     - uses: actions/checkout@v1
-    - name: Flutter action
     - uses: actions/setup-java@v1
       with:
         java-version: '12.x'
-    - uses: subosito/flutter-action@v1.2.0
+    - uses: subosito/flutter-action@v1
       with:
-        flutter-version: '1.9.1+hotfix.6'
+        flutter-version: '1.7.8+hotfix.4'
     - run: flutter pub get
     - run: flutter test
-    - run: flutter build apk
-    # - uses: actions/checkout@v2
-    # - name: Install dependencies
-    #   run: pub get
-    # - name: Run tests
-    #   run: pub run test
+    - run: flutter build apk --debug --split-per-abi
+    - name: Create a Release APK
+      uses: ncipollo/release-action@v1
+      with:
+        artifacts: "build/app/outputs/apk/debug/*.apk"
+        token: ${{ secrets.TOKEN }}
